Updates to rules and main page.

--- a/rules.html
+++ b/rules.html
@@ -19,10 +19,10 @@
       <li><a href="index.html" class="nav-link fade-link">← Strona główna</a></li>
       <li><a href="#intro" class="nav-link">Wprowadzenie</a></li>
       <li><a href="#ranks" class="nav-link">Rangi</a></li>
-      <li><a href="#channels" class="nav-link">Kanały Discord</a></li>
       <li><a href="#general" class="nav-link">Ogólne</a></li>
       <li><a href="#raidgroup" class="nav-link">Grupa Raidowa</a></li>
       <li><a href="#boe" class="nav-link">Dystrybucja BoE</a></li>
+      <li><a href="#channels" class="nav-link">Kanały Discord</a></li>
       <li><a href="#contact" class="nav-link">Kontakt</a></li>
     </ul>
   </nav>
@@ -45,10 +45,13 @@
         Gra jest dla nas oderwaniem się od szarej rzeczywistości, a nie drugą pracą i rozumiemy, że każdy dysponuje inną
         ilością wolnego czasu.
         Z tego powodu wzajemnie szanujemy swój czas i ciągle staramy się polepszać swoje umiejętności na wielu
-        płaszczyznach.
+        płaszczyznach. Nie zmuszamy nikogo do aktywności ponad swoje możliwości i czasowe zobowiązania względem grupy
+        raidowej.
       </p>
-      Naszym nastawieniem jest soft-progress, nie jesteśmy gildią socjalną.
-      <p>Dążymy do tego, aby w każdym raid tierze gildyjnie osiągnąć sukces na poziomie heroic oraz spróbować swoich sił
+      Naszym nastawieniem jest soft-progress, nie jesteśmy gildią socjalną, co nie oznacza, że nie szukamy nowych
+      przyjaciół. Po prostu uważamy, że przyjaźnie powinny kształtować się same w miarę tego jak się poznajemy, a nie
+      być wymuszonymi kurtazyjnymi posiadówami na kanale.
+      <p>Dążymy do tego, aby w każdym raid tierze gildyjnie osiągnąć sukces na poziomie Heroic oraz spróbować swoich sił
         na Mythic. </p>
       Dla osób niezainteresowanych raidowaniem również znajdzie się miejsce w naszych szeregach w grupach aspirujących
       na pomyślne ukończenie mitycznych dungeonów zdobywając Keystone Hero.
@@ -116,45 +119,6 @@
         Widoczność oraz możliwość korzystania z kanałów głosowych z kategorii PvE oraz PvP.</p>
     </section>
 
-    <section id="channels" class="section-card fade-in">
-      <h2>Kanały Discord</h2>
-
-      <h3>Kanały Tekstowe</h3>
-      <p><strong>Kategoria #Kanały informacyjne</strong> – wszystkie kanały z kategorii, za wyjątkiem
-        <strong>📅nieobecności</strong>, mają wyłączoną możliwość pisania.
-        Są to kanały, na których powinny znajdować się tylko istotne informacje łatwe do odnalezienia, takie jak zapisy,
-        logi, taktyki itp.
-      </p>
-
-      <p><strong>Kategoria #Kanały tekstowe</strong> – wszystkie kanały z kategorii służą do luźnych dyskusji na różne
-        tematy związane z grą.
-        Kategoria zawiera m.in. kanał <strong>⚡aktywności</strong> służący do inicjowania przez gildiowiczów dodatkowych
-        wydarzeń.</p>
-
-      <p><strong>Kategoria #off-topic</strong> – wszystkie kanały z kategorii służą do luźnych dyskusji na różne tematy
-        niezwiązane z grą.</p>
-
-      <h3>Kanały głosowe</h3>
-
-      <p><strong>🔥The Warcry Tribe</strong> – miejsce na luźne pogaduchy.</p>
-
-      <p><strong>💤Z dala od ogniska</strong> – miejsce, gdzie gracze zostają automatycznie przeniesieni z innych
-        kanałów po
-        15 minutach nieaktywności na Discordzie.</p>
-
-      <p><strong>Kategoria #PVE</strong> – zawiera kanały dedykowane aktywnościom takim jak mityczne dungeony i raidy.
-      </p>
-
-      <p><strong>Kategoria #PVP</strong> – zawiera kanały dedykowane aktywnościom takim jak areny i battlegroundy.</p>
-
-      <p><strong>Kategoria #PUG</strong> – zawiera dwa kanały przeznaczone na komunikację w przypadku aktywności z
-        PUGiem:
-        <strong>💩Raids with PUG</strong> oraz <strong>💩Battlegrounds with PUG</strong>.
-        Oficerowie są w posiadaniu zaproszeń do tych kanałów.
-      </p>
-
-    </section>
-
     <section id="general" class="section-card fade-in">
       <h2>Ogólny</h2>
       <ol>
@@ -207,6 +171,9 @@
 
         <li>Gracz musi posiadać main postać na max levelu, aby móc zaprosić swoje alty do gildii.</li></br>
 
+        <li>Gracz nie może posiadać postaci w innych gildiach. Gramy razem albo w ogóle. Tworzymy zwartą społeczność na
+          codzień, a nie tylko od święta.</li></br>
+
         <li>Mile widziane jest zaangażowanie plemiennych pobratymców poprzez przekazywanie golda oraz przydatnych itemów
           do
           guild banku zgodnie ze swoimi możliwościami.</li></br>
@@ -220,14 +187,16 @@
       <h2>Grupa Raidowa</h2>
       <ol>
         <li>
-          Każdy gracz przychodzi na raid przygotowany (<strong>enchanty, potiony, runy, znajomość taktyk</strong>).
-          Flaszki
-          oraz feasty na raidach gildyjnych sponsorowane są przez gildię.
+          Każdy gracz przychodzi na raid przygotowany (<strong>enchanty, potiony, runy, talenty, znajomość
+            taktyk</strong>).
+          Flaszki oraz feasty na raidach gildyjnych sponsorowane są przez gildię.
         </li></br>
 
         <li>
           Szanujemy czas innych – jeśli gracz zadeklarował obecność, powinien pojawić się o ustalonym czasie lub
           poinformować innych o ewentualnych przeciwnościach, by reszta grupy nie czekała bezcelowo.
+          Zapisując się do grupy raidowej, gracz deklaruje swoją gotowość w zakresie zarówno obecności, umiejętności
+          oraz przygotowania postaci.
         </li></br>
 
         <li>
@@ -238,8 +207,8 @@
 
         <li>
           W trakcie walk staramy się skupić na osiągnięciu celu w zadanym czasie. Oznacza to, że w trakcie raidu lub
-          mythica
-          progressowego, rozmowy <strong>off-topic</strong> nie powinny mieć miejsca.
+          mythica progressowego, rozmowy <strong>spoza osób wyznaczonych lub przekazujące najważniejsze informacje
+            odnośnie walki</strong> nie powinny mieć miejsca.
         </li></br>
 
         <li>
@@ -256,12 +225,12 @@
 
         <li>
           Każdy raidujący gracz jest zobowiązany korzystać z kilku podstawowych, lecz kluczowych <strong>addonów i
-            WeakAuras</strong>.
-          Obowiązkowe addony można znaleźć na kanale <strong>🧰addony</strong> w poście: <strong>🧰addony</strong>.
+            WeakAur</strong>.
+          Obowiązkowe addony można znaleźć na kanale <strong>🧰addony</strong> w przypiętym poście.
           Na chwilę obecną są to: <strong>DBM/BigWigs, Mythic Raid Tools, GTFO!, WeakAuras, RC Loot Council</strong>.
-          Obowiązkowe WeakAury można znaleźć na kanale <strong>💫weak-aury</strong>: <em>Nerub'ar Palace</em> oraz
-          <em>Raid
-            Ability Timeline</em>.
+          Obowiązkowe WeakAury można znaleźć na kanale <strong>💫weak-aury</strong>: <em>"Raid Weak Aura" by Causeuse
+          </em> oraz
+          <em>Raid Ability Timeline</em>.
         </li></br>
 
         <li>
@@ -273,7 +242,7 @@
           W
           przeciwnym razie nie będą uwzględniane podczas dystrybucji lootu. Wszelkie próby ninja lootingu będą
           skutkowały
-          kickiem z raidu.
+          kickiem z raidu oraz gildii.
           W przypadku przedmiotów setowych pierwszeństwo mają osoby z nieparzystą ilością itemów setowych (najpierw
           osoby z 1
           setem, następnie z 3 setami). RL decyduje, komu dany item da największy upgrade, a w przypadku przedmiotów
@@ -281,24 +250,19 @@
         </li></br>
 
         <li>
-          Raidy na następny tydzień będą rozpisywane na kanale <strong>🏰raid-info</strong> po zakończeniu ostatniego
-          raidu
-          przed resetem (w przypadku raidów w niedzielę i wtorek – po wtorkowym raidzie).
+          Przed rozpoczęciem raidu, gracze chcący rollować rzadki lub specyficzny item, zobowiązani są przygotować
+          stosowną symulację swojego gearu wraz z tym upgradem i wrzucenie linku na kanał raidowy.
         </li></br>
 
         <li>
-          Wszyscy członkowie gildii deklarujący wcześniej oficerom chęć raidowania są zobowiązani do zgłoszenia swojej
-          obecności na raidzie poprzez zaznaczenie w rozpisanym wydarzeniu swojej klasy i roli oraz skorzystanie z
-          dodatkowych
-          opcji:
+          W przypadku nie skupiania się na wykonywaniu mechanik, lecz "robieniu" cyferek, parsowaniu, graczowi może
+          zostać odmówione uczestnictwo w lootcie, lub zostanie wyproszony z raidu.
         </li></br>
 
-        <ul>
-          <li><strong>Late</strong> – gdy osoba raidująca wie, że spóźni się na raid</li></br>
-          <li><strong>Tentative</strong> – gdy osoba raidująca nie ma pewności, czy uda jej się uczestniczyć w raidzie
-          </li></br>
-          <li><strong>Absence</strong> – gdy osoba raidująca nie będzie mogła uczestniczyć w danym raidzie</li></br>
-        </ul>
+        <li>
+          Gracze zapisani do grupy raidowej, zobowiązani są do zaliczenia przynajmniej 2 nagród z kategorii Mythic
+          Dungeons do Great Vault - wymagany poziom na dany tydzień będzie podawany na Discord lub w MotD.
+        </li></br>
 
         <li>
           Logi z raidów będą wrzucane i dostępne na kanale <strong>🏰raid-info</strong> po zakończeniu raidu. Logi mają
@@ -307,10 +271,21 @@
         </li></br>
 
         <li>
+          Na raidach możliwe do callowania mechaniki sprawiające grupie trudności będą callowane w miarę możliwości.
+          Jednakże wymagane jest również od graczy skupienie, przygotowanie do walki, a także samokrytyczne podejście do
+          swojego performance'u.
+        </li></br>
+
+        <li>
           W przypadku niewystarczającej frekwencji na raid gildyjny (<strong>80%</strong>), możliwe jest odwołanie
-          raidu, o
-          czym grupa raidowa zostanie poinformowana na kanale <strong>🏰raid-info</strong>.
-        </li>
+          raidu, o czym grupa raidowa zostanie poinformowana na kanale <strong>🏰raid-info</strong>.
+        </li></br>
+
+        <li>
+          Grupa raidowa nie gra do oporu. Po osiągnięciu zadanych osiągnięć lub w przypadku braku wystarczającego
+          progressu przez 3 tygodnie, z powodów: zmniejszonej frekwencji, znużenia, braku skupienia - dalsza gra w
+          sezonie jest odroczona lub sezon jest automatycznie zakańczany.
+        </li></br>
 
     </section>
 
@@ -354,9 +329,50 @@
       </ol>
     </section>
 
+    <section id="channels" class="section-card fade-in">
+      <h2>Kanały Discord</h2>
+
+      <h3>💬Kanały Tekstowe💬</h3>
+      <p><strong>Kategoria #Kanały informacyjne</strong> – wszystkie kanały z kategorii, za wyjątkiem
+        <strong>📅nieobecności</strong>, mają wyłączoną możliwość pisania.
+        Są to kanały, na których powinny znajdować się tylko istotne informacje łatwe do odnalezienia, takie jak zapisy,
+        logi, taktyki itp.
+      </p>
+
+      <p><strong>Kategoria #Kanały tekstowe</strong> – wszystkie kanały z kategorii służą do luźnych dyskusji na różne
+        tematy związane z grą World of Warcraft.
+        Kategoria zawiera m.in. kanał <strong>⚡aktywności</strong> służący do inicjowania przez gildiowiczów dodatkowych
+        wydarzeń.</p>
+
+      <p><strong>Kategoria #off-topic</strong> – wszystkie kanały z kategorii służą do luźnych dyskusji na różne tematy
+        niezwiązane z grą World of Warcraft.</p>
+
+      <h3>🔊Kanały głosowe🔊</h3>
+
+      <p><strong>🔥The Warcry Tribe</strong> – miejsce na luźne pogaduchy.</p>
+
+      <p><strong>💤Z dala od ogniska</strong> – miejsce, gdzie gracze zostają automatycznie przeniesieni z innych
+        kanałów po
+        15 minutach nieaktywności na Discordzie.</p>
+
+      <p><strong>Kategoria #PVE</strong> – zawiera kanały dedykowane aktywnościom takim jak mityczne dungeony i raidy.
+      </p>
+
+      <p><strong>Kategoria #PVP</strong> – zawiera kanały dedykowane aktywnościom takim jak areny i battlegroundy.</p>
+
+      <p><strong>Kategoria #PUG</strong> – zawiera dwa kanały przeznaczone na komunikację w przypadku aktywności z
+        PUGiem:
+        <strong>💩Raids with PUG</strong> oraz <strong>💩Battlegrounds with PUG</strong>.
+        Oficerowie są w posiadaniu zaproszeń do tych kanałów.
+      </p>
+
+      <p><strong>Kategoria #Inne-Gry</strong> – zawiera kanały na których przesiadujemy grając w inne gry.</p>
+
+    </section>
+
     <section id="contact" class="section-card fade-in">
       <h2>Kontakt</h2>
-      <p>Znajdziesz nas na</p>
+      <p>Znajdziesz nas na:</p>
       <a class="btn-raid fade-link" href="https://raider.io/guilds/eu/burning-legion/The%20Warcry%20Tribe"
         target="_blank" rel="noopener">Raider.io</a>
       <a class="btn-wow fade-link"
@@ -372,7 +388,7 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 The Warcry Tribe | Ostatnia aktualizacja: 24 października 2025</p>
+    <p>© 2025 The Warcry Tribe | Ostatnia aktualizacja: 27 października 2025</p>
   </footer>
 
   <script src="script.js"></script>
