Few more tweaks

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       <p>
         <strong>The Warcry Tribe</strong> to gildia dla dorosłych graczy, którzy szukają zgranej ekipy do raidów
         <strong>Heroic</strong> i <strong>Mythic*</strong>. Gramy <strong>dwa razy</strong> w tygodniu
-        (<strong>wt/czw 20:00–23:00</strong>), z naciskiem na <strong>jakość</strong>, nie ilość. Tak więc, na parsy i spocone cyferki patrzymy krzywo :)
+        (<strong>wt/czw 20:00–23:00</strong>), z naciskiem na <strong>jakość</strong>, nie ilość. Tak więc parsy i
+        spocone cyferki przy podejściu "ktoś inny wykona mechaniki" oraz "chcę mieć callowaną każdą oczywistą rzecz,
+        żeby myśleć tylko o moich parsach" to nie u nas 🙂
       </p>
       <p>
         Cenimy kulturę osobistą, wzajemny szacunek i chęć doskonalenia się. Gra to dla nas przyjemność, nie obowiązek –
@@ -62,7 +64,8 @@
       </ul>
 
       <p>
-        Mamy aktywny Discord – głównie tekstowo, głosowo tylko na raidach, M+ lub oczywiście w trakcie wspólnych rozgrywek.
+        Mamy aktywny Discord – głównie tekstowo, głosowo tylko na raidach, M+ lub oczywiście w trakcie wspólnych
+        rozgrywek.
       </p>
       <p>
         Każdy nowy gracz przechodzi okres próbny – dajemy sobie czas, żeby sprawdzić, czy nam po drodze.
