--- a/rules.html
+++ b/rules.html
@@ -206,8 +206,8 @@
         </li></br>
 
         <li>
-          W trakcie walk staramy się skupić na osiągnięciu celu w zadanym czasie. Oznacza to, że w trakcie raidu lub
-          mythica progressowego, rozmowy <strong>spoza osób wyznaczonych lub przekazujące najważniejsze informacje
+          W trakcie walk staramy się skupić na osiągnięciu celu w zadanym czasie. Oznacza to, że w trakcie raidu,
+          rozmowy <strong>spoza osób wyznaczonych lub przekazujące istotne informacje
             odnośnie walki</strong> nie powinny mieć miejsca.
         </li></br>
 
@@ -251,17 +251,20 @@
 
         <li>
           Przed rozpoczęciem raidu, gracze chcący rollować rzadki lub specyficzny item, zobowiązani są przygotować
-          stosowną symulację swojego gearu wraz z tym upgradem i wrzucenie linku na kanał raidowy.
+          stosowną symulację swojego gearu wraz z tym upgradem i wrzucenie linku na dedykowany kanał raidowy.
         </li></br>
 
         <li>
           W przypadku nie skupiania się na wykonywaniu mechanik, lecz "robieniu" cyferek, parsowaniu, graczowi może
-          zostać odmówione uczestnictwo w lootcie, lub zostanie wyproszony z raidu.
+          zostać odmówione uczestnictwo w lootcie lub zostanie wyproszony z raidu. Decyzja odnośnie konsekwencji takiego
+          zachowania zostanie podjęta przez oficerów uwzględniając, czy wyproszenie danej osoby z raidu będzie miało
+          negatywny wpływ na progress.
         </li></br>
 
         <li>
           Gracze zapisani do grupy raidowej, zobowiązani są do zaliczenia przynajmniej 2 nagród z kategorii Mythic
-          Dungeons do Great Vault - wymagany poziom na dany tydzień będzie podawany na Discord lub w MotD.
+          Dungeons do Great Vault - wymagany poziom na dany tydzień będzie podawany na Discord lub w MotD. Wymóg ten
+          podyktowany jest jak najlepszym ubiorem członków grupy raidowej, aby usprawnić progress.
         </li></br>
 
         <li>
@@ -282,10 +285,14 @@
         </li></br>
 
         <li>
-          Grupa raidowa nie gra do oporu. Po osiągnięciu zadanych osiągnięć lub w przypadku braku wystarczającego
-          progressu przez 3 tygodnie, z powodów: zmniejszonej frekwencji, znużenia, braku skupienia - dalsza gra w
+          Grupa raidowa nie gra do oporu. Po osiągnięciu zadanych osiągnięć lub w przypadku braku satysfakcjonującego
+          progressu przez 3 resety, z powodów: zmniejszonej frekwencji, znużenia, braku skupienia - dalsza gra w
           sezonie jest odroczona lub sezon jest automatycznie zakańczany.
         </li></br>
+
+        <li> W przypadku grupy raidowej liczącej powyżej 20 osób - na raidy Mythic w grupie miejsce mają gracze
+          cechujący się najlepszą postawą tj. frekwencja, wykonywanie mechanik oraz mających najlepszy performance
+          (DPS/HPS).</li></br>
 
     </section>
 
@@ -315,17 +322,6 @@
           Zyski ze sprzedaży trafiają do <strong>guild banku</strong> i zostają przeznaczone na zakup consumabli
           (<strong>flaszki oraz feasty</strong>) oraz zwiększenie kwot napraw.
         </li></br>
-
-        <li>
-          W celu zaoszczędzenia czasu podczas raidu zakup <strong>BoE</strong> przez gildiowiczów będzie możliwy po jego
-          zakończeniu. Przedmioty <strong>BoE</strong> do kupienia będzie można przeglądać w zakładce
-          "<strong>Lombard</strong>" w guild banku.
-        </li></br>
-
-        <li>
-          Przedmioty niekupione bezpośrednio po raidzie będą przetrzymywane w banku do następnego resetu. Niekupione
-          przedmioty <strong>BoE</strong> będą wystawiane na AH w każdą środę.
-        </li>
       </ol>
     </section>
 
